# php-rs

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  GEMINI.md  README.md  REFLECTION_IMPLEMENTATION.md
benchmarks/: Dockerfile  docker-compose.yml  run_bench.sh
benchmarks/nginx/: native.conf  rust.conf
benchmarks/src/: fib.php  hello.php  json.php  mandelbrot.php  objects.php  strings.php
docker/wordpress/: Dockerfile.php-fpm  docker-compose.yml  nginx.conf
docs/: IMPLEMENTATION_PLANS.md  PHPT_TEST_FIXES.md  object_helpers_usage.md
docs/plans/: 2026-01-06-array-literal-unexpected-semicolon.md  2026-01-06-class-final-is-final.md  2026-01-06-cli-epoch-gc-implementation-plan.md  2026-01-06-cli-gc-memory-design.md  2026-01-06-reflection-class-doc-comment-design.md  2026-01-06-reflection-class-isinstance.md  2026-01-06-reflection-class-issubclassof.md  2026-01-06-reflection-class-newinstance-args.md  2026-01-06-reflection-class-newinstance.md  2026-01-07-attribute-reflection.md  2026-01-07-benchmark-suite-expansion.md  2026-01-07-fastcgi-finish-request.md  (+14 more)
src/: lib.rs
src/builtins/: array.rs  (+22 more)
tests/: anonymous_class_extends.rs  anonymous_class_var_dump.rs  argument_unpack_call.rs  array_access.rs  array_assign.rs  array_callable_unpack.rs  array_functions.rs  array_offset_access.rs  array_search.rs  arrays.rs  assign_dim_ref.rs  assign_op_dim.rs  assign_op_static.rs  assign_op_tests.rs  autoload_class_const.rs  autoload_interface.rs  autoload_parent_class.rs  autoload_static_method.rs  bcmath.rs  class_const_array.rs  class_const_array_assign.rs  class_constants.rs  class_name_case.rs  class_name_resolution.rs  class_property_default_array.rs  classes.rs  closures.rs  coalesce_assign.rs  const_array_class_const.rs  const_array_foreach.rs  constant_errors.rs  constants.rs  constructor_override.rs  constructors.rs  datetime_classes_test.rs  datetime_procedural_test.rs  datetime_test.rs  debug_backtrace_constants.rs  debug_backtrace_function.rs  debug_verify_return.rs  (+159 more)
(+407 files in other folders)
